--- a/ceramic.yml
+++ b/ceramic.yml
@@ -16,7 +16,7 @@ app:
         #- nape
 
         # Support of .ase/.aseprite files
-        #- ase
+        - ase
 
         # Sprite support (requires ase plugin to create sprites from .ase/.aseprite files)
         - sprite
@@ -25,7 +25,7 @@ app:
         - tilemap
 
         # LDtk support (requires tilemap and ase plugins)
-        # - ldtk
+        - ldtk
 
         # HTTP client
         #- http
